; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_l2cap_core.c_l2cap_logical_fail.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_l2cap_core.c_l2cap_logical_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2cap_chan = type { i64, i32, i32 }

@BT_CONNECTED = common dso_local global i64 0, align 8
@ECONNRESET = common dso_local global i32 0, align 4
@L2CAP_MR_NOT_SUPP = common dso_local global i32 0, align 4
@L2CAP_MOVE_WAIT_LOGICAL_COMP = common dso_local global i32 0, align 4
@L2CAP_MOVE_WAIT_LOGICAL_CFM = common dso_local global i32 0, align 4
@L2CAP_MC_UNCONFIRMED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.l2cap_chan*)* @l2cap_logical_fail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l2cap_logical_fail(%struct.l2cap_chan* %0) #0 {
  %2 = alloca %struct.l2cap_chan*, align 8
  store %struct.l2cap_chan* %0, %struct.l2cap_chan** %2, align 8
  %3 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %4 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @BT_CONNECTED, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %10 = load i32, i32* @ECONNRESET, align 4
  %11 = call i32 @l2cap_send_disconn_req(%struct.l2cap_chan* %9, i32 %10)
  br label %41

12:                                               ; preds = %1
  %13 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %14 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  switch i32 %15, label %41 [
    i32 128, label %16
    i32 129, label %22
  ]

16:                                               ; preds = %12
  %17 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %18 = call i32 @l2cap_move_done(%struct.l2cap_chan* %17)
  %19 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %20 = load i32, i32* @L2CAP_MR_NOT_SUPP, align 4
  %21 = call i32 @l2cap_send_move_chan_rsp(%struct.l2cap_chan* %19, i32 %20)
  br label %41

22:                                               ; preds = %12
  %23 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %24 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @L2CAP_MOVE_WAIT_LOGICAL_COMP, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %34, label %28

28:                                               ; preds = %22
  %29 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %30 = getelementptr inbounds %struct.l2cap_chan, %struct.l2cap_chan* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @L2CAP_MOVE_WAIT_LOGICAL_CFM, align 4
  %33 = icmp eq i32 %31, %32
  br i1 %33, label %34, label %37

34:                                               ; preds = %28, %22
  %35 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %36 = call i32 @l2cap_move_done(%struct.l2cap_chan* %35)
  br label %37

37:                                               ; preds = %34, %28
  %38 = load %struct.l2cap_chan*, %struct.l2cap_chan** %2, align 8
  %39 = load i32, i32* @L2CAP_MC_UNCONFIRMED, align 4
  %40 = call i32 @l2cap_send_move_chan_cfm(%struct.l2cap_chan* %38, i32 %39)
  br label %41

41:                                               ; preds = %8, %12, %37, %16
  ret void
}

declare dso_local i32 @l2cap_send_disconn_req(%struct.l2cap_chan*, i32) #1

declare dso_local i32 @l2cap_move_done(%struct.l2cap_chan*) #1

declare dso_local i32 @l2cap_send_move_chan_rsp(%struct.l2cap_chan*, i32) #1

declare dso_local i32 @l2cap_send_move_chan_cfm(%struct.l2cap_chan*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
